--- a/blog.html
+++ b/blog.html
@@ -176,7 +176,7 @@
             <nav>
                 <div class="logo"><i class="fas fa-laptop-code"></i> DevTechBlog</div>
                 <ul class="nav-links">
-                    <li><a href="website.html"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="#"><i class="fas fa-blog"></i> Blog</a></li>
                     <li><a href="website.html#about"><i class="fas fa-user"></i> About Me</a></li>
                     <li><a href="vickybytes.html"><i class="fas fa-building"></i> VickyBytes</a></li>
