--- a/vickybytes.html
+++ b/vickybytes.html
@@ -236,9 +236,9 @@
             <nav>
                 <div class="logo"><i class="fas fa-laptop-code"></i> DevTechBlog</div>
                 <ul class="nav-links">
-                    <li><a href="website.html"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="blog.html"><i class="fas fa-blog"></i> Blog</a></li>
-                    <li><a href="website.html#about"><i class="fas fa-user"></i> About Me</a></li>
+                    <li><a href="index.html#about"><i class="fas fa-user"></i> About Me</a></li>
                     <li><a href="vickybytes.html"><i class="fas fa-building"></i> VickyBytes</a></li>
                 </ul>
             </nav>
