--- a/blog.html
+++ b/blog.html
@@ -178,7 +178,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="#"><i class="fas fa-blog"></i> Blog</a></li>
-                    <li><a href="website.html#about"><i class="fas fa-user"></i> About Me</a></li>
+                    <li><a href="index.html#about"><i class="fas fa-user"></i> About Me</a></li>
                     <li><a href="vickybytes.html"><i class="fas fa-building"></i> VickyBytes</a></li>
                 </ul>
             </nav>
