--- a/index.html
+++ b/index.html
@@ -311,10 +311,22 @@
                         <i class="fas fa-users"></i>
                     </div>
                     <div class="blog-content">
-                        <div class="blog-meta"><i class="far fa-calendar-alt"></i> March 5, 2025 | Community</div>
-                        <h3>The Power of Developer Communities in Technical Growth</h3>
-                        <p>How engaging with developer communities can accelerate learning and provide valuable networking opportunities.</p>
+                        <div class="blog-meta"><i class="far fa-calendar-alt"></i> March 18, 2025 | Community</div>
+                        <h3>How Google and NVIDIA Are Teaming Up to Solve Real-World Problems with AI: A Perspective</h3>
+                        <p>What happens when two tech giants unite in the AI arena? Google and Nvidia's GTC announcements are changing the game. Get the inside scoop on their cutting-edge developments and why you should care.</p>
                         <a href="blog.html" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <!-- Added Another Blog Post -->
+                <div class="blog-card">
+                    <div class="blog-image">
+                        <i class="fas fa-tools"></i>
+                    </div>
+                    <div class="blog-content">
+                        <div class="blog-meta"><i class="far fa-calendar-alt"></i> March 03, 2025 | Developer Tools</div>
+                        <h3>Introducing Data Science Agent in Colab Powered by Gemini 1.5</h3>
+                        <p>Supercharge your data analysis with AI! The Data Science Agent is now available in Colab, powered by Gemini. Learn how to automate tasks, generate code, and gain deeper insights faster.</p>
+                        <a href="blog1.html" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
                 
@@ -324,7 +336,7 @@
                         <i class="fas fa-rocket"></i>
                     </div>
                     <div class="blog-content">
-                        <div class="blog-meta"><i class="far fa-calendar-alt"></i> March 10, 2025 | Tech Review</div>
+                        <div class="blog-meta"><i class="far fa-calendar-alt"></i> February 15, 2025 | Tech Review</div>
                         <h3>Exploring VickyBytes: A Developer's Perspective</h3>
                         <p>An in-depth look at how VickyBytes is transforming the developer ecosystem and empowering technical communities.</p>
                         <a href="vickybytes.html" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
