added another article

--- a/index.html
+++ b/index.html
@@ -342,6 +342,18 @@
                         <a href="vickybytes.html" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
+
+                <div class="blog-card">
+                    <div class="blog-image">
+                        <i class="fas fa-microchip"></i>
+                    </div>
+                    <div class="blog-content">
+                        <div class="blog-meta"><i class="far fa-calendar-alt"></i> April 04, 2025 | AI</div>
+                        <h3>Building My First AI Chatbot using OpenAI API — A Dev Journey</h3>
+                        <p>Built my first AI-powered chatbot using OpenAI's API — a hands-on dive into language models, prompts, and real-time interaction.</p>
+                        <a href="build_ai_chatbot.html" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
